test/e2e/invalid/bufwrite_nonbuffer.mylang
{
    define x of int32 = 5;
    bufwrite(x, 42);
}
